--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
-/public/upload/**
-!/public/upload/**/.gitkeep
+public/upload/*/*
+!public/upload/*/**/.gitkeep
